--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="card-group">
                     <div class="card">
-                        <img class="card-img-top" src="Chittaurgarh.jpg" alt="Error 404">
+                        <img class="card-img-top" src="chittaurgarh.jpg" alt="Error 404">
                             <div class="card-body">
                                 <h4 class="card-title">Chittaurgarh Fort</h4>
                                 <p class="card-text">This is an amazing Fort of India. It is also known as Eye of Rajputana</p>
@@ -144,7 +144,7 @@
             <!-- Copyright -->
             <div class="text-center p-3 text-white" style="background-color: rgba(0, 0, 0, 0.2)">
                 © 2020 Copyright:
-                <a class="text-white" href="#/">Swarnasekhar Dutta</a>
+                <a class="text-white" href="https://github.com/SwarnaSSD">Swarnasekhar Dutta</a>
             </div>
             <!-- Copyright -->
         </footer>
